kajit/tests/snapshots/generated_ir_opt_corpus__generated_ir_opt_after_bounds_check_chain_coalesce.snap
---
source: kajit/tests/generated_ir_opt_corpus.rs
expression: after
---
lambda @0 (shape: "u8") {
  region {
    args: [%cs, %os]
    n1 = BoundsCheck(1) [%cs:arg] -> [%cs]
    n2 = PeekByte [%cs:n1] -> [v0, %cs]
    n4 = ReadBytes(1) [%cs:n2] -> [v1, %cs]
    n5 = WriteToField(offset=0, W1) [v1, %os:arg] -> [%os]
    results: [%cs:n4, %os:n5]
  }
}
