kajit/tests/snapshots/generated_ir_opt_corpus__generated_ir_opt_after_theta_loop_variant_not_hoisted.snap
---
source: kajit/tests/generated_ir_opt_corpus.rs
expression: after
---
lambda @0 (shape: "u8") {
  region {
    args: [%cs, %os]
    n1 = Const(0x4) [] -> [v0]
    n2 = Const(0x1) [] -> [v1]
    n5 = theta [v0, v1, %cs:arg, %os:arg] {
      region {
        args: [arg0, arg1, %cs, %os]
        n4 = Sub [arg0, arg1] -> [v3]
        results: [v3, v3, arg1, %cs:arg, %os:arg]
      }
    } -> [v4, v5, %cs, %os]
    n6 = WriteToField(offset=0, W1) [v4, %os:n5] -> [%os]
    results: [%cs:n5, %os:n6]
  }
}
