kajit/tests/snapshots/generated_ir_opt_corpus__generated_ir_opt_before_theta_invariant_tree_hoist.snap
---
source: kajit/tests/generated_ir_opt_corpus.rs
expression: before
---
lambda @0 (shape: "u8") {
  region {
    args: [%cs, %os]
    n1 = Const(0x4) [] -> [v0]
    n2 = Const(0x1) [] -> [v1]
    n9 = theta [v0, v1, %cs:arg, %os:arg] {
      region {
        args: [arg0, arg1, %cs, %os]
        n3 = Const(0x7) [] -> [v2]
        n4 = Const(0x3) [] -> [v3]
        n5 = Add [v2, v3] -> [v4]
        n6 = Xor [v4, v3] -> [v5]
        n7 = Sub [arg0, arg1] -> [v6]
        n8 = Add [v5, v6] -> [v7]
        results: [v6, v6, arg1, %cs:arg, %os:arg]
      }
    } -> [v8, v9, %cs, %os]
    n10 = WriteToField(offset=0, W1) [v8, %os:n9] -> [%os]
    results: [%cs:n9, %os:n10]
  }
}
